# djangobnb

./: .code-workspace  .gitignore
backend/: pyproject.toml
backend/django_backend/: settings.py  urls.py
backend/property/: admin.py  apps.py  models.py  pagination.py  serializers.py  signals.py  urls.py  views.py
backend/property/migrations/: 0001_initial.py  0002_property_cleaning_fee_property_service_fee_percent.py  0003_add_fulltext_search.py  0004_add_search_vector.py  0005_remove_property_property_search_idx.py  0006_property_property_search_idx.py
backend/useraccount/: admin.py  filters.py  models.py  pagination.py  permissions.py  serializers.py  urls.py  validators.py  views.py
backend/useraccount/migrations/: 0001_initial.py
frontend/: components.json  middleware.ts  next.config.ts  package-lock.json  package.json  tsconfig.json
frontend/app/: actions.ts  global.css  layout.tsx  not-found.tsx  page.tsx  shadcn.css
frontend/app/about/: page.tsx
frontend/app/account/: page.tsx
frontend/app/contact/: page.tsx
frontend/app/listings/: page.tsx
frontend/app/privacy/: page.tsx
frontend/app/properties/: page.tsx
frontend/components/: BookingWidget.tsx  ClientProviders.tsx  Footer.tsx  Header.tsx  LayoutClient.tsx  LiveSearch.tsx  Load.tsx  Logo.tsx  Magnifying.tsx  NewPropertyForm.tsx  PropertyCard.tsx  PropertyList.tsx  ProtectedRoute.tsx  ThemeProvider.tsx  ThemeSwitcher.tsx
frontend/contexts/: AuthContext.tsx
frontend/hooks/: useDebounce.ts  useProperties.ts  useProperty.ts
frontend/services/: authService.tsx  propertyService.tsx
(+9 files in other folders)
